# DCF

./: .gitignore  pyproject.toml
data/: particle_data.json5
data/DDM/: ddm_results.json5
data/DLS/: dls_results.json5  old_dls_results.json5
dcf/: constants.py  utils.py
dcf/ddm/: __init__.py
dcf/dls/: __init__.py
ddm/: analysis.py
ddm/image/: frame.py  reader.py
notebooks/: cddm_test.ipynb  ddm.ipynb  dls.ipynb  image_test.ipynb  particle_size.ipynb  video_converter.ipynb
notes/DLS/: Sample.md  Samples.md  Theory.md
