[tool.poetry]
name = "DCF"
version = "0.1.0"
description = ""
authors = [
    "Jeppe Klitgaard <jk782@cam.ac.uk>",
    "Tom Ben-Ami <tab63@cam.ac.uk>"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
ipykernel = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
